Fix: (.hero-title) text-align: right
See <https://github.com/scientific-python/scientific-python-hugo-theme/pull/276#issuecomment-1738440595>.

--- a/assets/theme-css/styles.css
+++ b/assets/theme-css/styles.css
@@ -82,6 +82,7 @@ table th {
   margin-left: 1em;
   margin-bottom: 0.2em;
   margin-right: 0.5em;
+  text-align: right;
 }
 
 .hero-logo {
